Added devices list meta-parameter to clCreateContext.

--- a/opencl/opencl_meta_parameters.yaml
+++ b/opencl/opencl_meta_parameters.yaml
@@ -8,6 +8,7 @@ meta_parameters:
     - [ OutArray, devices ]
   clCreateContext:
     - [ InNullArray, properties ]
+    - [ InArray, devices, num_devices ]
   clCreateContextFromType:
     - [ InNullArray, properties ]
   clEnqueueNDRangeKernel:
