--- a/opencl/opencl_meta_parameters.yaml
+++ b/opencl/opencl_meta_parameters.yaml
@@ -148,11 +148,50 @@ meta_parameters:
     - [ InArray, input_value, input_value_size ]
   clSetProgramSpecializationConstant:
     - [ InArray, spec_value, spec_size ]
+  clCreateImageWithPropertiesINTEL:
+    - [ InNullArray, properties ]
+  clGetImageParamsINTEL:
+    - [ OutScalar, image_row_pitch ]
+    - [ OutScalar, image_slice_pitch ]
+  clAddCommentINTEL:
+    - [ InString, comment ]
+  clSetPerformanceConfigurationINTEL:
+    - [ InArray, offsets, count ]
+    - [ InArray, values, count ]
+    - [ OutArray, offsets, count ]
+    - [ OutArray, values, count ]
+  clHostMemAllocINTEL:
+    - [ InNullArray, properties ]
+  clDeviceMemAllocINTEL:
+    - [ InNullArray, properties ]
+  clSharedMemAllocINTEL:
+    - [ InNullArray, properties ]
+  clEnqueueMemFillINTEL:
+    - [ InArray, pattern, pattern_size ]
+  clGetDeviceFunctionPointerINTEL:
+    - [ OutScalar, function_pointer_ret ]
+  clGetDeviceGlobalVariablePointerINTEL:
+    - [ InString, global_variable_name ]
+    - [ OutScalar, global_variable_size_ret ]
+    - [ OutScalar, global_variable_pointer_ret ]
+  clGetExecutionInfoINTEL:
+    - [ InArray, global_work_offset, work_dim ]
+    - [ InArray, local_work_size, work_dim ]
+  clEnqueueNDRangeKernelINTEL:
+    - [ InArray, global_work_offset, work_dim ]
+    - [ InArray, work_group_count, work_dim ]
+    - [ InArray, local_work_size, work_dim ]
 meta_structs:
   clCreateImage2D:
     - [ image_format, cl_image_format ]
   clCreateImage3D:
     - [ image_format, cl_image_format ]
   clCreateImage:
+    - [ image_format, cl_image_format ]
+    - [ image_desc, cl_image_desc ]
+  clCreateImageWithPropertiesINTEL:
+    - [ image_format, cl_image_format ]
+    - [ image_desc, cl_image_desc ]
+  clGetImageParamsINTEL:
     - [ image_format, cl_image_format ]
     - [ image_desc, cl_image_desc ]
