--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -1,9 +1,16 @@
+.DELETE_ON_ERROR:
+
+OPENCL_PROBES = opencl_tracepoints opencl_profiling opencl_source opencl_dump
+OPENCL_PROBES_OBJS = $(OPENCL_PROBES:=.o)
+OPENCL_PROBES_INCL = $(OPENCL_PROBES:=.h)
+OPENCL_PROBES_SRC = $(OPENCL_PROBES:=.c)
+
 all: tracer_opencl.so
 
 LTTNG_FLAGS=-fPIC -g -Wall -Werror -O3 -I./ -I../utils/
 
-utils:
-	$(MAKE) -C ../utils
+../utils/lttng/tracepoint_gen.h: ../utils/tracepoint_gen.rb
+	ruby ../utils/tracepoint_gen.rb 25 > ../utils/lttng/tracepoint_gen.h
 
 tracer_opencl.h: gen_opencl_header.rb
 	ruby gen_opencl_header.rb > tracer_opencl.h
@@ -11,24 +18,15 @@ tracer_opencl.h: gen_opencl_header.rb
 opencl_tracepoints.tp: gen_opencl_probes.rb opencl_model.rb tracer_opencl.h opencl_meta_parameters.yaml supported_extensions.yaml
 	ruby gen_opencl_probes.rb > opencl_tracepoints.tp
 
-opencl_tracepoints.o: opencl_tracepoints.tp utils
-	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp opencl_tracepoints.tp
-
-opencl_profiling.o: opencl_profiling.tp utils
-	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp opencl_profiling.tp
-
-opencl_source.o: opencl_source.tp utils
-	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp opencl_source.tp
-
-opencl_dump.o: opencl_dump.tp utils
-	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp opencl_dump.tp
+%.o %.h: %.tp ../utils/lttng/tracepoint_gen.h
+	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp $<
 
 tracer_opencl.c: gen_opencl.rb opencl_model.rb opencl_meta_parameters.yaml supported_extensions.yaml tracer_opencl_helpers.include.c
 	ruby gen_opencl.rb > tracer_opencl.c
 
-tracer_opencl.so: utils tracer_opencl.c opencl_tracepoints.o opencl_profiling.o opencl_source.o opencl_dump.o
+tracer_opencl.so: ../utils/lttng/tracepoint_gen.h tracer_opencl.c $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL)
 	gcc -g -O3 -Wall -pedantic -Wextra -Werror -I./ -I../utils/ -o tracer_opencl.so -shared -fPIC -Wl,--version-script,tracer_opencl.map tracer_opencl.c opencl_tracepoints.o opencl_profiling.o opencl_source.o opencl_dump.o -llttng-ust -ldl -lffi
 
 clean:
-	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so opencl_tracepoints.tp opencl_profiling.o opencl_source.o opencl_tracepoints.o opencl_dump.o opencl_tracepoints.c opencl_profiling.c opencl_source.c opencl_dump.c opencl_tracepoints.h opencl_profiling.h opencl_source.h opencl_dump.h
+	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so opencl_tracepoints.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC)
 	$(MAKE) -C ../utils clean
