--- a/ze/Makefile
+++ b/ze/Makefile
@@ -1,9 +1,17 @@
+.DELETE_ON_ERROR:
+
+ZE_PROBES = ze_tracepoints zex_tracepoints zet_tracepoints
+ZE_TP = $(ZE_PROBES:=.tp)
+ZE_OBJS = $(ZE_PROBES:=.o)
+ZE_INCL = $(ZE_PROBES:=.h)
+ZE_SRC = $(ZE_PROBES:=.c)
+
 all: tracer_ze.so
 
 LTTNG_FLAGS=-fPIC -g -Wall -Werror -O3 -I./ -I./include/core -I./include/experimental -I./include/tools -I../utils/
 
-utils:
-	$(MAKE) -C ../utils
+../utils/lttng/tracepoint_gen.h: ../utils/tracepoint_gen.rb
+	ruby ../utils/tracepoint_gen.rb 25 > ../utils/lttng/tracepoint_gen.h
 
 ze_api.yaml: $(shell find include/core -type f) extract_base.rb extract_ze.rb
 	ruby extract_ze.rb
@@ -14,29 +22,17 @@ zex_api.yaml: $(shell find include/core include/experimental -type f) extract_ba
 zet_api.yaml: $(shell find include/core include/experimental include/tools -type f) extract_base.rb extract_zet.rb
 	ruby extract_zet.rb
 
-ze_tracepoints.tp: ze_api.yaml zex_api.yaml zet_api.yaml yaml_ast.rb ze_model.rb gen_ze_probes.rb gen_probe_base.rb
-	ruby gen_ze_probes.rb > ze_tracepoints.tp
+%.tp: %.rb ze_api.yaml zex_api.yaml zet_api.yaml yaml_ast.rb ze_model.rb gen_probe_base.rb
+	ruby $< > $@
 
-ze_tracepoints.o: ze_tracepoints.tp utils
-	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp ze_tracepoints.tp
+%.o %.h: %.tp ../utils/lttng/tracepoint_gen.h
+	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp $<
 
-zex_tracepoints.tp: ze_api.yaml zex_api.yaml zet_api.yaml yaml_ast.rb ze_model.rb gen_zex_probes.rb gen_probe_base.rb
-	ruby gen_zex_probes.rb > zex_tracepoints.tp
-
-zex_tracepoints.o: zex_tracepoints.tp utils
-	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp zex_tracepoints.tp
-
-zet_tracepoints.tp: ze_api.yaml zex_api.yaml zet_api.yaml yaml_ast.rb ze_model.rb gen_zet_probes.rb gen_probe_base.rb
-	ruby gen_zet_probes.rb > zet_tracepoints.tp
-
-zet_tracepoints.o: zet_tracepoints.tp utils
-	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp zet_tracepoints.tp
-
-tracer_ze.so: utils ze_tracepoints.o zex_tracepoints.o zet_tracepoints.o
+tracer_ze.so: ../utils/lttng/tracepoint_gen.h $(ZE_OBJS) $(ZE_INCL)
 	echo nop
 
 # objcopy --prefix-symbols= on ze_api.a content should allow a wrapper creation
 
 clean:
-	rm -f ze_api.yaml zex_api.yaml zet_api.yaml ze_tracepoints.tp ze_tracepoints.c ze_tracepoints.h ze_tracepoints.o
+	rm -f ze_api.yaml zex_api.yaml zet_api.yaml $(ZE_TP) $(ZE_OBJS) $(ZE_INCL) $(ZE_SRC)
 	$(MAKE) -C ../utils clean
