--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -7,7 +7,7 @@ OPENCL_PROBES_SRC = $(OPENCL_PROBES:=.c)
 
 all: tracer_opencl.so
 
-LTTNG_FLAGS=-fPIC -g -Wall -Werror -O3 -I./ -I../utils/
+LTTNG_FLAGS=-fPIC -g -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Werror -O3 -I./ -I../utils/
 
 ../utils/lttng/tracepoint_gen.h: ../utils/tracepoint_gen.rb
 	ruby ../utils/tracepoint_gen.rb 25 > ../utils/lttng/tracepoint_gen.h
@@ -25,7 +25,7 @@ tracer_opencl.c: gen_opencl.rb opencl_model.rb opencl_meta_parameters.yaml suppo
 	ruby gen_opencl.rb > tracer_opencl.c
 
 tracer_opencl.so: ../utils/lttng/tracepoint_gen.h tracer_opencl.c $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL)
-	gcc -g -O3 -Wall -pedantic -Wextra -Werror -I./ -I../utils/ -o tracer_opencl.so -shared -fPIC -Wl,--version-script,tracer_opencl.map tracer_opencl.c opencl_tracepoints.o opencl_profiling.o opencl_source.o opencl_dump.o -llttng-ust -ldl -lffi
+	gcc -g -O3 -Wall -Wextra -Werror -I./ -I../utils/ -o tracer_opencl.so -shared -fPIC -Wl,--version-script,tracer_opencl.map tracer_opencl.c opencl_tracepoints.o opencl_profiling.o opencl_source.o opencl_dump.o -llttng-ust -ldl -lffi
 
 clean:
 	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so opencl_tracepoints.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC)
