--- a/ze/Makefile
+++ b/ze/Makefile
@@ -8,7 +8,7 @@ ZE_SRC = $(ZE_PROBES:=.c)
 
 all: tracer_ze.so
 
-LTTNG_FLAGS=-fPIC -g -Wall -Werror -O3 -I./ -I./include/core -I./include/experimental -I./include/tools -I../utils/
+LTTNG_FLAGS=-fPIC -g -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Werror -O3 -I./ -I./include/core -I./include/experimental -I./include/tools -I../utils/
 
 ../utils/lttng/tracepoint_gen.h: ../utils/tracepoint_gen.rb
 	ruby ../utils/tracepoint_gen.rb 25 > ../utils/lttng/tracepoint_gen.h
@@ -25,7 +25,7 @@ zet_api.yaml: $(shell find include/core include/experimental include/tools -type
 %.tp: %.rb ze_api.yaml zex_api.yaml zet_api.yaml yaml_ast.rb ze_model.rb gen_probe_base.rb
 	ruby $< > $@
 
-%.o %.h: %.tp ../utils/lttng/tracepoint_gen.h
+%.c %.h %.o: %.tp ../utils/lttng/tracepoint_gen.h
 	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp $<
 
 tracer_ze.so: ../utils/lttng/tracepoint_gen.h $(ZE_OBJS) $(ZE_INCL)
